plugins {
    alias(libs.plugins.spring.boot) apply false
}

def catalog = libs
def libraryProjects = subprojects.findAll { it.name.startsWith('Lib-') }
def applicationProjects = subprojects.findAll { it.name.startsWith('App-') }

subprojects {
    group = 'cn.bcd'
    version = '1.0'

    apply plugin: 'java'
    apply plugin: 'idea'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
        withSourcesJar()
    }

    configurations.configureEach {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback', module: 'logback-classic'
        exclude group: 'ch.qos.logback', module: 'logback-core'
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    }

    dependencies {
        compileOnly catalog.lombok
        annotationProcessor catalog.lombok

        compileOnly catalog.mapstruct
        annotationProcessor catalog.mapstruct.processor

        testImplementation platform(catalog.junit.bom)
        testImplementation catalog.junit.jupiter.api
        testRuntimeOnly catalog.junit.jupiter.engine
        testRuntimeOnly catalog.junit.platform.launcher
        testImplementation catalog.log4j.slf4j2.impl
    }

    idea {
        module {
            downloadSources = true
            downloadJavadoc = true
        }
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }
}

configure(libraryProjects) {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    publishing {
        publications {
            maven(MavenPublication) {
                from components.java
            }
        }
    }
}

configure(applicationProjects) {
    apply plugin: 'org.springframework.boot'

    springBoot {
        mainClass = 'cn.bcd.Application'
    }

    tasks.named('bootJar') {
        exclude '**/application-local.yml'
    }

    tasks.named('bootRun') {
        jvmArgs(
                '-XX:-RestrictContended',
                '-Dfile.encoding=UTF-8',
                '-Dsun.jnu.encoding=UTF-8',
                '--add-opens=java.base/java.nio=ALL-UNNAMED',
                '--add-opens=java.base/java.lang=ALL-UNNAMED',
                '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
        )
    }
}
